tests/check/illegal_groups.co
// RUN: choreo %s -t cute -arch=sm_90a 2>&1 |FileCheck %s

__co__ void foo(f32 [64, 32] a) {
  parallel by 1 {
    parallel p by 4 : group-4 {
      parallel r by 32;
    }
    parallel q by 16 : group {
      parallel s by 8;
    }
  }
}

// CHECK: error: The total thread dimension must be a multiple of 128 when 'group-4' exists for SM_90A.
// CHECK: error: The total thread dimension must be a multiple of 32 when 'group' exists for SM_90A.

__co__ void bar() {
  parallel by 1 {
    parallel p by 4 : group-4 {
      parallel q by 16 : group;
      parallel r by 32;
    }
  }
}

// CHECK: error: explicit 'group' inside the 'group-4' parallel-by is not supported by SM_90A.
// CHECK: The total thread dimension must be a multiple of 128 when 'group-4' exists for SM_90A.
